# MyChessBot

./: .gitignore
src/: Board.h  CMakeLists.txt  Uci.cpp  Uci.h  main.cpp
src/Board/: Board.cpp  Board.h  generateLegalMoves.cpp  initDefaultBoard.cpp  initFenBoard.cpp  printBoard.cpp  resetBoard.cpp
src/Uci/: Uci.cpp  Uci.h
